<resources>
    <string name="app_name">HappyPlaceApp</string>
    <string name="fab_add_happy_place">fab_add_happy_place</string>
    <string name="edt_hint_title">Title</string>
    <string name="edt_hint_description">Description</string>
    <string name="edt_hint_date">Date</string>
    <string name="edt_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="no_happy_places_found_yet">No Happy Places Found Yet. Kindly add one.</string>
    <string name="image_content_description">image</string>
</resources>